# snarkl

./: .gitignore  .gitmodules  .hlint.yaml  Makefile  README.md  cabal.project  dev-profile  dev-profile-1-link  flake.nix  prepare-depends.sh  prog2-inputs.jsonl  prog2-r1cs.jsonl  prog2-witness.jsonl  r1cs.jsonl  snarkl.cabal
.github/workflows/: lint.yml  makefile.yml  nix-ci.yml  snarky.yml
app/: Main.hs
arkworks-bridge/: Cargo.toml
arkworks-bridge/src/: circuit.rs  header.rs  main.rs  r1cs.rs  witness.rs
benchmarks/: Harness.hs  Main.hs
cppsrc/: Makefile  snarky.cpp
examples/Snarkl/Example/: Basic.hs  Games.hs  Keccak.hs  Lam.hs  List.hs  Matrix.hs  Peano.hs  Queue.hs  Stack.hs  Sudoku.hs  Tree.hs
experiments/: benchmark-input.plot
print-examples/: Main.hs
printer-tests/: Main.hs
scripts/: hspec-inputs.jsonl  hspec-witness.jsonl  prog-witness.jsonl  test-inputs.jsonl  test-r1cs.jsonl  test-vk  test-witness.jsonl
src/: Common.hs  Compile.hs  Constraints.hs  Dataflow.hs  Errors.hs  Expr.hs  Field.hs  Games.hs  Interp.hs  Poly.hs  R1CS.hs  Serialize.hs  SimplMonad.hs  Simplify.hs  Solve.hs  Syntax.hs  SyntaxMonad.hs  TExpr.hs  Toplevel.hs  UnionFind.hs
src/Control/Monad/: Supply.hs
src/Control/Monad/Supply/: Class.hs
src/Data/: JSONLines.hs
src/Snarkl/: AST.hs  Arkworks.hs  CLI.hs  Common.hs  Compile.hs  Constraint.hs  Constraints.hs  Dataflow.hs  Errors.hs  Expr.hs  Field.hs  Interp.hs  Language.hs  Poly.hs  R1CS.hs  Serialize.hs  SimplMonad.hs  Simplify.hs  Solve.hs  Syntax.hs  SyntaxMonad.hs  TExpr.hs  Toplevel.hs  UnionFind.hs  Utils.hs
src/Snarkl/AST/: Expr.hs  LambdaExpr.hs  SyntaxMonad.hs  TExpr.hs  Type.hs
src/Snarkl/Backend/: R1CS.hs
src/Snarkl/Backend/R1CS/: Poly.hs  R1CS.hs  Serialize.hs
src/Snarkl/CLI/: Common.hs  Compile.hs  GenWitness.hs  RunAll.hs  Utils.hs
src/Snarkl/Constraint/: Constraints.hs  Dataflow.hs  SimplMonad.hs  Simplify.hs  Solve.hs  UnionFind.hs
src/Snarkl/Language/: Core.hs  Expr.hs  LambdaExpr.hs  Matrix.hs  Prelude.hs  Syntax.hs  SyntaxMonad.hs  TExpr.hs  Type.hs  Vector.hs
src/Snarkl/Modules/: Vector.hs
src/examples/: Basic.hs  Games.hs  Keccak.hs  Lam.hs  List.hs  Matrix.hs  Peano.hs  Queue.hs  Stack.hs  Tree.hs
src/testsuite/benchmarks/: Harness.hs  Main.hs
src/testsuite/tests/: Main.hs  UnitTests.hs
tests/: Main.hs  UnitTests.hs
tests/Test/: ArkworksBridge.hs  UnionFindSpec.hs
tests/Test/Snarkl/: DataflowSpec.hs  LambdaSpec.hs  UnitSpec.hs
tests/Test/Snarkl/Unit/: Programs.hs
tutorial/: .gitignore  CHANGELOG.md  LICENSE  README.md  Sudoku.md  tutorial.cabal
tutorial/composite-test/: Main.md  README.md
tutorial/sudoku/: Main.md  README.md  Solver.hs  Sudoku.lhs  Sudoku.md
tutorial/sudoku/solver/: Main.hs
