name:               snarkl

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Snarkl: An Embedded DSL for Verifiable Computing
description:        Snarkl: An Embedded DSL for Verifiable Computing
homepage:           https://github.com/gstew5/snarkl
license:            BSD3
license-file:       LICENSE
author:             Gordon Stewart
maintainer:         gstew5@gmail.com
category:           Language
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/gstew5/snarkl

test-suite hspec
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Basic
    Games
    Keccak
    Lam
    List
    Matrix
    Peano
    Queue
    Stack
    Tree
    UnitTests

  hs-source-dirs:   src/testsuite/tests src/examples
  default-language: Haskell2010
  build-depends:
      base        >=4.7
    , Cabal       >=1.22
    , containers  >=0.5     && <0.6
    , criterion   >=1.0
    , hspec       >=2.0
    , mtl         >=2.2     && <2.3
    , parallel    >=3.2     && <3.3
    , process     >=1.2
    , snarkl      >=0.1.0.0

benchmark criterion
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Common
    Compile
    Constraints
    Dataflow
    Errors
    Expr
    Field
    Harness
    Interp
    Keccak
    List
    Matrix
    Poly
    R1CS
    Serialize
    Simplify
    SimplMonad
    Solve
    Syntax
    SyntaxMonad
    TExpr
    Toplevel
    UnionFind

  hs-source-dirs:   src src/testsuite/benchmarks src/examples
  default-language: Haskell2010
  build-depends:
      base        >=4.7
    , Cabal       >=1.22
    , containers  >=0.5     && <0.6
    , criterion   >=1.0
    , hspec       >=2.0
    , mtl         >=2.2     && <2.3
    , parallel    >=3.2     && <3.3
    , process     >=1.2
    , snarkl      >=0.1.0.0

library
  ghc-options:        -Wall -Werror -funbox-strict-fields -rtsopts -optc-O3

  -- -threaded
  exposed-modules:
    Compile
    Errors
    R1CS
    Syntax
    SyntaxMonad
    TExpr
    Toplevel

  -- Modules included in this library but not exported.
  other-modules:
    Common
    Constraints
    Dataflow
    Expr
    Field
    Interp
    Poly
    Serialize
    Simplify
    SimplMonad
    Solve
    UnionFind

  default-extensions:
    BangPatterns
    DataKinds
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
      base        >=4.7
    , Cabal       >=1.22
    , containers  >=0.5  && <0.7
    , criterion   >=1.0
    , hspec       >=2.0
    , mtl         >=2.2  && <2.3
    , parallel    >=3.2  && <3.3
    , process     >=1.2

  hs-source-dirs:
    src src/testsuite/tests src/testsuite/benchmarks src/examples

  default-language:   Haskell2010
