name:               snarkl

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Snarkl: An Embedded DSL for Verifiable Computing
description:        Snarkl: An Embedded DSL for Verifiable Computing
homepage:           https://github.com/gstew5/snarkl
license:            BSD3
license-file:       LICENSE
author:             Gordon Stewart
maintainer:         gstew5@gmail.com
category:           Language
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/gstew5/snarkl

test-suite hspec
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Snarkl.Example.Basic
    Snarkl.Example.Games
    Snarkl.Example.Keccak
    Snarkl.Example.Lam
    Snarkl.Example.List
    Snarkl.Example.Matrix
    Snarkl.Example.Peano
    Snarkl.Example.Queue
    Snarkl.Example.Stack
    Snarkl.Example.Tree
    UnitTests

  default-extensions:
    DataKinds
    GADTs
    KindSignatures
    RankNTypes
    ScopedTypeVariables

  hs-source-dirs:     tests examples
  default-language:   Haskell2010
  build-depends:
      base        >=4.7
    , Cabal       >=1.22
    , containers  >=0.5     && <0.6
    , criterion   >=1.0
    , hspec       >=2.0
    , mtl         >=2.2     && <2.3
    , parallel    >=3.2     && <3.3
    , process     >=1.2
    , snarkl      >=0.1.0.0

benchmark criterion
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Harness
    Snarkl.Example.Basic
    Snarkl.Example.Games
    Snarkl.Example.Keccak
    Snarkl.Example.Lam
    Snarkl.Example.List
    Snarkl.Example.Matrix
    Snarkl.Example.Peano
    Snarkl.Example.Queue
    Snarkl.Example.Stack
    Snarkl.Example.Tree

  default-extensions:
    BangPatterns
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  --DeriveDataTypeable
  --GeneralizedNewtypeDeriving
  --PolyKinds
  --StandaloneDeriving
  hs-source-dirs:     benchmarks examples
  default-language:   Haskell2010
  build-depends:
      base        >=4.7
    , Cabal       >=1.22
    , containers  >=0.5     && <0.6
    , criterion   >=1.0
    , hspec       >=2.0
    , mtl         >=2.2     && <2.3
    , parallel    >=3.2     && <3.3
    , process     >=1.2
    , snarkl      >=0.1.0.0

library
  ghc-options: 
    -Wall 
    -Wredundant-constraints
    -Werror 
    -funbox-strict-fields 
    -rtsopts 
    -optc-O3

  -- -threaded
  exposed-modules:
    Snarkl.Common
    Snarkl.Compile
    Snarkl.Constraints
    Snarkl.Dataflow
    Snarkl.Errors
    Snarkl.Expr
    Snarkl.Field
    Snarkl.Interp
    Snarkl.Poly
    Snarkl.R1CS
    Snarkl.Serialize
    Snarkl.Simplify
    Snarkl.SimplMonad
    Snarkl.Solve
    Snarkl.Syntax
    Snarkl.SyntaxMonad
    Snarkl.TExpr
    Snarkl.Toplevel
    Snarkl.UnionFind

  default-extensions:
    BangPatterns
    DataKinds
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
      base        >=4.7
    , Cabal       >=1.22
    , containers  >=0.5  && <0.7
    , criterion   >=1.0
    , hspec       >=2.0
    , mtl         >=2.2  && <2.3
    , parallel    >=3.2  && <3.3
    , prettyprinter
    , process     >=1.2

  hs-source-dirs:     src
  default-language:   Haskell2010
