[package]
name = "arkworks-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
clap = "3.0"
num-bigint = {version = "0.4", features = ["serde"]}
num-traits = "0.2"