cabal-version:      3.0
name:               tutorial
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Martin Allen
maintainer:         martyall@protonmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Sudoku
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      fin,
                      snarkl
    hs-source-dirs:   ./.
    default-language: Haskell2010
    build-tool-depends:  markdown-unlit:markdown-unlit
    ghc-options:         -pgmL markdown-unlit -Wall -Werror
